--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,19 @@ attrs==18.2.0
 blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
+docopt==0.6.2
 Flask==3.1.1
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
--e git+https://github.com/achudnova/LittleTex.git@c9d409f70de2fdbb5b3932559600fd555fed8ed0#egg=littletex
+lark-parser==0.12.0
+-e git+https://github.com/achudnova/LittleTex.git@4b2776a06693903148eb7de72812a75256c93ee1#egg=littletex
+lxml==6.0.0
 MarkupSafe==3.0.2
 packaging==25.0
 pdflatex==0.1.3
 pluggy==1.6.0
+py-asciimath==0.3.0
 pyfiglet==1.0.3
 Pygments==2.19.1
 pytest==8.4.0
